compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_do_not_suggest_modules_with_private_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport module\npub fn main() {\n    one\n}"
---
----- SOURCE CODE
-- module.gleam

const one = 1

-- main.gleam

import module
pub fn main() {
    one
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:4:5
  │
4 │     one
  │     ^^^

The name `one` is not in scope here.
